se aplica recomendaciones de lint en archivo seguridad