@@ -1,4 +1,4 @@
-package com.cblandon.inversiones.Security.jwt;
+package com.cblandon.inversiones.security.jwt;
 
 import com.cblandon.inversiones.user.UserDetailsServiceImpl;
 import io.jsonwebtoken.Claims;
@@ -26,15 +26,18 @@ import java.util.stream.Collectors;
 public class JwtUtils {
     @Value("${jwt.secret.key}")
     private String secretKey;
-    @Autowired
-    UserDetailsServiceImpl userDetailsService;
+    final UserDetailsServiceImpl userDetailsService;
+
+    public JwtUtils(UserDetailsServiceImpl userDetailsService) {
+        this.userDetailsService = userDetailsService;
+    }
 
     // Generar token de acceso
     public String generateAccesToken(String username) {
         UserDetails user = userDetailsService.loadUserByUsername(username);
         Instant issuedAt = Instant.now().truncatedTo(ChronoUnit.SECONDS);
         Instant expiration = issuedAt.plus(6, ChronoUnit.HOURS);
-        List<String> roles = user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+        List<String> roles = user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
 
         return Jwts.builder()
                 .claim("Roles", roles)
